force-app/main/default/objects/TechnicalRequirement__c/TechnicalRequirement__c.object-meta.xml
<CustomObject>
    <description>Ability to create Standard Inquiry Technical Requirements</description>
    <label>Technical Requirement</label>
    <nameField>
        <label>Technical Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technical Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>