force-app/main/default/objects/TechnicalRequirement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Use accounts to store information</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Technical Requirements</relationshipLabel>
    <relationshipName>TechnicalRequirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>