force-app/main/default/objects/TechnicalRequirement__c/fields/AdditionalDeliveryConditions__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDeliveryConditions__c</fullName>
    <label>Addl. Delivery Conditions (Quality Dep)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>