force-app/main/default/objects/TechnicalRequirement__c/fields/AlternativeSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>AlternativeSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternative Steel Grade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SteelGrade__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Technical Requirements (Alternative Steel Grade)</relationshipLabel>
    <relationshipName>Technical_Requirements1</relationshipName>
    <type>Lookup</type>
</CustomField>