force-app/main/default/objects/TechnicalRequirement__c/fields/BundleWeight__c.field-meta.xml
<CustomField>
    <fullName>BundleWeight__c</fullName>
    <label>Bundle Weight</label>
    <length>15</length>
    <type>Text</type>
</CustomField>