force-app/main/default/objects/TechnicalRequirement__c/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <label>Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessArea</valueSetName>
    </valueSet>
</CustomField>