force-app/main/default/objects/TechnicalRequirement__c/fields/Certificate__c.field-meta.xml
<CustomField>
    <fullName>Certificate__c</fullName>
    <label>Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Certificate</fullName>
            </value>
            <value>
                <fullName>2.2 Factory Certificate</fullName>
            </value>
            <value>
                <fullName>3.1 Acceptance Test Certificate</fullName>
            </value>
            <value>
                <fullName>3.2 Acceptance Test Certificate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>