force-app/main/default/objects/TechnicalRequirement__c/fields/CheckOnLanguageChange__c.field-meta.xml
<CustomField>
    <fullName>CheckOnLanguageChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check On Language Change</label>
    <type>Checkbox</type>
</CustomField>