force-app/main/default/objects/TechnicalRequirement__c/fields/CheckTreatment__c.field-meta.xml
<CustomField>
    <fullName>CheckTreatment__c</fullName>
    <label>Check/Treatment (St.11-14)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>