force-app/main/default/objects/TechnicalRequirement__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Use to store additional comments</description>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>