force-app/main/default/objects/TechnicalRequirement__c/fields/ComponentApplication__c.field-meta.xml
<CustomField>
    <fullName>ComponentApplication__c</fullName>
    <label>Component Application</label>
    <length>30</length>
    <type>Text</type>
</CustomField>