force-app/main/default/objects/TechnicalRequirement__c/fields/CRule__c.field-meta.xml
<CustomField>
    <fullName>CRule__c</fullName>
    <label>C- Rule (St.7+8)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>