force-app/main/default/objects/TechnicalRequirement__c/fields/Degassing__c.field-meta.xml
<CustomField>
    <fullName>Degassing__c</fullName>
    <label>Degassing (St.6)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>