force-app/main/default/objects/TechnicalRequirement__c/fields/DimensionA__c.field-meta.xml
<CustomField>
    <fullName>DimensionA__c</fullName>
    <label>Dimension A</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>