force-app/main/default/objects/TechnicalRequirement__c/fields/DimensionB__c.field-meta.xml
<CustomField>
    <fullName>DimensionB__c</fullName>
    <label>Dimension B</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>