force-app/main/default/objects/TechnicalRequirement__c/fields/EndProcessing__c.field-meta.xml
<CustomField>
    <fullName>EndProcessing__c</fullName>
    <label>End Processing (St.36)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>