force-app/main/default/objects/TechnicalRequirement__c/fields/EndProcessingSides__c.field-meta.xml
<CustomField>
    <fullName>EndProcessingSides__c</fullName>
    <label>End Processing Sides (St.37)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>