force-app/main/default/objects/TechnicalRequirement__c/fields/FinishedGoods__c.field-meta.xml
<CustomField>
    <fullName>FinishedGoods__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Finished goods number</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FinishedGoods__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FinishedGoods__c</referenceTo>
    <relationshipLabel>Technical Requirements</relationshipLabel>
    <relationshipName>Technical_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>