force-app/main/default/objects/TechnicalRequirement__c/fields/Finishing__c.field-meta.xml
<CustomField>
    <fullName>Finishing__c</fullName>
    <label>Finishing (St.45)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>