force-app/main/default/objects/TechnicalRequirement__c/fields/HeatTreatmentQW__c.field-meta.xml
<CustomField>
    <fullName>HeatTreatmentQW__c</fullName>
    <label>Heat treatment (Quality Dep)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HeatTreatment</valueSetName>
    </valueSet>
</CustomField>