force-app/main/default/objects/TechnicalRequirement__c/fields/Homogenize__c.field-meta.xml
<CustomField>
    <fullName>Homogenize__c</fullName>
    <label>Homogenize (St.27)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>