force-app/main/default/objects/TechnicalRequirement__c/fields/HZVAnnealing__c.field-meta.xml
<CustomField>
    <fullName>HZVAnnealing__c</fullName>
    <label>HZV - Annealing (St.26)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>