force-app/main/default/objects/TechnicalRequirement__c/fields/HZVCheckTreatment__c.field-meta.xml
<CustomField>
    <fullName>HZVCheckTreatment__c</fullName>
    <label>HZV - Check/Treatment (St.22-25)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>