force-app/main/default/objects/TechnicalRequirement__c/fields/HZVSampletest__c.field-meta.xml
<CustomField>
    <fullName>HZVSampletest__c</fullName>
    <label>HZV - Sample test (St.19)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>