force-app/main/default/objects/TechnicalRequirement__c/fields/Inductive__c.field-meta.xml
<CustomField>
    <fullName>Inductive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inductive</label>
    <type>Checkbox</type>
</CustomField>