force-app/main/default/objects/TechnicalRequirement__c/fields/InternalRemark__c.field-meta.xml
<CustomField>
    <fullName>InternalRemark__c</fullName>
    <label>Internal Remark</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>