force-app/main/default/objects/TechnicalRequirement__c/fields/InternalSteelGrade__c.field-meta.xml
<CustomField>
    <fullName>InternalSteelGrade__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Steel Grade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SteelGrade__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SteelGrade__c</referenceTo>
    <relationshipLabel>Technical Requirements</relationshipLabel>
    <relationshipName>Technical_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>