force-app/main/default/objects/TechnicalRequirement__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>TEXT( Opportunity__r.Language__c )</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>