force-app/main/default/objects/TechnicalRequirement__c/fields/MultipleStraightening__c.field-meta.xml
<CustomField>
    <fullName>MultipleStraightening__c</fullName>
    <label>Multiple Straightening (St.32)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>