force-app/main/default/objects/TechnicalRequirement__c/fields/NormRestriction__c.field-meta.xml
<CustomField>
    <fullName>NormRestriction__c</fullName>
    <label>Norm Restriction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>