force-app/main/default/objects/TechnicalRequirement__c/fields/NormRestrictionQuality__c.field-meta.xml
<CustomField>
    <fullName>NormRestrictionQuality__c</fullName>
    <label>Norm Restriction (Quality Dep)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>