force-app/main/default/objects/TechnicalRequirement__c/fields/NormSpecification__c.field-meta.xml
<CustomField>
    <fullName>NormSpecification__c</fullName>
    <label>Norm/ Specification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NormSpecificationQW</valueSetName>
    </valueSet>
</CustomField>