force-app/main/default/objects/TechnicalRequirement__c/fields/NormSpecificationQuality__c.field-meta.xml
<CustomField>
    <fullName>NormSpecificationQuality__c</fullName>
    <label>Norm/ Specification (Quality Dep)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NormSpecificationQW</valueSetName>
    </valueSet>
</CustomField>