force-app/main/default/objects/TechnicalRequirement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use Opportunity to store information</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Requirements</relationshipLabel>
    <relationshipName>TechnicalRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>