force-app/main/default/objects/TechnicalRequirement__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Technical Requirements</relationshipLabel>
    <relationshipName>TechnicalRequirements</relationshipName>
    <type>Lookup</type>
</CustomField>