force-app/main/default/objects/TechnicalRequirement__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin (St.2)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>