force-app/main/default/objects/TechnicalRequirement__c/fields/OtherInformationExternal__c.field-meta.xml
<CustomField>
    <fullName>OtherInformationExternal__c</fullName>
    <label>Other Information External</label>
    <type>TextArea</type>
</CustomField>