force-app/main/default/objects/TechnicalRequirement__c/fields/Packaging__c.field-meta.xml
<CustomField>
    <fullName>Packaging__c</fullName>
    <label>Packaging (St.46)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>