force-app/main/default/objects/TechnicalRequirement__c/fields/PackagingSales__c.field-meta.xml
<CustomField>
    <fullName>PackagingSales__c</fullName>
    <label>Packaging</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>02 - Seaworthy packing</fullName>
            </value>
            <value>
                <fullName>04 -Packed/wrapped in plastic tubular film (SAG)</fullName>
            </value>
            <value>
                <fullName>06 - Wrapped in oiled paper</fullName>
            </value>
            <value>
                <fullName>08 - Wrapped in jute</fullName>
            </value>
            <value>
                <fullName>10 - Wrapped in oiled paper and jute</fullName>
            </value>
            <value>
                <fullName>12 - Cont. Lined with foil</fullName>
            </value>
            <value>
                <fullName>14 - BU Type 2 VPM standard</fullName>
            </value>
            <value>
                <fullName>15 - BU-Type 3 VCI+tubular film</fullName>
            </value>
            <value>
                <fullName>16 - Jute underlay</fullName>
            </value>
            <value>
                <fullName>17 - VCI Packing (Only)</fullName>
            </value>
            <value>
                <fullName>18 - Packed in boxes</fullName>
            </value>
            <value>
                <fullName>20 - Container shipment</fullName>
            </value>
            <value>
                <fullName>23 - Type 4 fabric tube padded</fullName>
            </value>
            <value>
                <fullName>25 - BU type 5 VCI+fabric padded</fullName>
            </value>
            <value>
                <fullName>30 - Packed externally at the port</fullName>
            </value>
            <value>
                <fullName>32 - Type 6 fabric hose puller</fullName>
            </value>
            <value>
                <fullName>34 - BU-TYPE 7 VCI+fabric puller</fullName>
            </value>
            <value>
                <fullName>36 - Type 8 air freight/ general cargo</fullName>
            </value>
            <value>
                <fullName>38 - Type 9 key fol.+thread. puller</fullName>
            </value>
            <value>
                <fullName>40 - BU Type 10 VPM 2X Armor VCI</fullName>
            </value>
            <value>
                <fullName>42 - BU Type 11 VPM Armour+Net VCI</fullName>
            </value>
            <value>
                <fullName>44 - Combination pack. 14 and 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>