force-app/main/default/objects/TechnicalRequirement__c/fields/Peelingbarwirerod__c.field-meta.xml
<CustomField>
    <fullName>Peelingbarwirerod__c</fullName>
    <label>Peeling bar/ wire rod (St.33)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>