force-app/main/default/objects/TechnicalRequirement__c/fields/PeelingGood__c.field-meta.xml
<CustomField>
    <fullName>PeelingGood__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peeling Good</label>
    <type>Checkbox</type>
</CustomField>