force-app/main/default/objects/TechnicalRequirement__c/fields/PrimRollingInputformat__c.field-meta.xml
<CustomField>
    <fullName>PrimRollingInputformat__c</fullName>
    <label>Prim. Rolling - Input format (St.16-18)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>