force-app/main/default/objects/TechnicalRequirement__c/fields/ProcessingbeforeHT__c.field-meta.xml
<CustomField>
    <fullName>ProcessingbeforeHT__c</fullName>
    <label>Processing before HT (St.28)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>