force-app/main/default/objects/TechnicalRequirement__c/fields/ProductGroupBusinessArea__c.field-meta.xml
<CustomField>
    <fullName>ProductGroupBusinessArea__c</fullName>
    <label>Product Group Business Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BusinessArea__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>BusinessSubgroup</valueSetName>
    </valueSet>
</CustomField>