force-app/main/default/objects/TechnicalRequirement__c/fields/RequiredQuantity__c.field-meta.xml
<CustomField>
    <fullName>RequiredQuantity__c</fullName>
    <label>Required Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jato</fullName>
            </value>
            <value>
                <fullName>Moto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>