force-app/main/default/objects/TechnicalRequirement__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <description>Use Requirement to store information</description>
    <label>Requirement</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>