force-app/main/default/objects/TechnicalRequirement__c/fields/RingWeightMax__c.field-meta.xml
<CustomField>
    <fullName>RingWeightMax__c</fullName>
    <label>Ring Weight max.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>