force-app/main/default/objects/TechnicalRequirement__c/fields/RodLength__c.field-meta.xml
<CustomField>
    <fullName>RodLength__c</fullName>
    <label>Rod Length</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>