force-app/main/default/objects/TechnicalRequirement__c/fields/Rollingmill__c.field-meta.xml
<CustomField>
    <fullName>Rollingmill__c</fullName>
    <label>Rolling mill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>