force-app/main/default/objects/TechnicalRequirement__c/fields/Sampling__c.field-meta.xml
<CustomField>
    <fullName>Sampling__c</fullName>
    <label>Sampling (St.10)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>