force-app/main/default/objects/TechnicalRequirement__c/fields/SpecialInspections__c.field-meta.xml
<CustomField>
    <fullName>SpecialInspections__c</fullName>
    <label>Special Inspections (St.43)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>