force-app/main/default/objects/TechnicalRequirement__c/fields/SteelMillTesting__c.field-meta.xml
<CustomField>
    <fullName>SteelMillTesting__c</fullName>
    <label>Steel Mill Testing (St.9)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>