force-app/main/default/objects/TechnicalRequirement__c/fields/STWCastingFormat__c.field-meta.xml
<CustomField>
    <fullName>STWCastingFormat__c</fullName>
    <label>STW Casting Format (St.3-5)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>