force-app/main/default/objects/TechnicalRequirement__c/fields/SurfaceConditionQW__c.field-meta.xml
<CustomField>
    <fullName>SurfaceConditionQW__c</fullName>
    <label>Surface Condition (Quality Dep)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SurfaceCondition</valueSetName>
    </valueSet>
</CustomField>