force-app/main/default/objects/TechnicalRequirement__c/fields/Surfacedefectinspec__c.field-meta.xml
<CustomField>
    <fullName>Surfacedefectinspec__c</fullName>
    <label>Inspec.-Surface defect inspec.(St.38+39)</label>
    <length>2</length>
    <type>Text</type>
</CustomField>