force-app/main/default/objects/TechnicalRequirement__c/fields/SurfaceTreatment__c.field-meta.xml
<CustomField>
    <fullName>SurfaceTreatment__c</fullName>
    <label>Straightening / SurfaceTreat. (St.31)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>