force-app/main/default/objects/TechnicalRequirement__c/fields/TargetProduct__c.field-meta.xml
<CustomField>
    <fullName>TargetProduct__c</fullName>
    <label>Target Product (St.1)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>