force-app/main/default/objects/TechnicalRequirement__c/fields/TechnicalOffer__c.field-meta.xml
<CustomField>
    <fullName>TechnicalOffer__c</fullName>
    <label>Technical Offer</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>