force-app/main/default/objects/TechnicalRequirement__c/fields/TestingFinishedMaterial__c.field-meta.xml
<CustomField>
    <fullName>TestingFinishedMaterial__c</fullName>
    <label>Testing Finished Material (St.44)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>