force-app/main/default/objects/TechnicalRequirement__c/fields/ToleranceBPlus__c.field-meta.xml
<CustomField>
    <fullName>ToleranceBPlus__c</fullName>
    <label>Tolerance B+</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>